Services Overview: Min height and text overflow fixed

--- a/app/modules/hercules/servicesOverview/_servicesOverview.scss
+++ b/app/modules/hercules/servicesOverview/_servicesOverview.scss
@@ -21,7 +21,7 @@
     margin-left: -1rem;
 
     display: block;
-    min-height: 90vh;
+    min-height: 85vh;
     width: 100%;
     width: calc(100% + 2rem);
 
@@ -111,6 +111,9 @@
         button.btn-link{
           color: $color-primary-base;
           background-color: transparent;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
         footer{
           border-top: 1px solid $gray-light-4;
